tests/NormalTests/paczka1/small_fuzzy/60645549.err
Error in line 9: S184 S184 72,0
Error in line 14: 6Guh S373 66,1
